--- a/desafio-3/api/src/main/resources/application.yml
+++ b/desafio-3/api/src/main/resources/application.yml
@@ -1,11 +1,8 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/redesocial
+    url: jdbc:postgresql://redesocial-postgres:5432/redesocial
     username: redesocial
     password: redesocial
-  jpa:
-    hibernate:
-      ddl-auto: validate
 server:
   error:
     include-message: always
